[metadata]
name = pyRAPL
version = attr: pyRAPL.__version__
description = 
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = energy
platform = linux
author = Arthur d'Azémar, Guillaume Fieni, Chakib Belgaid , Romain Rouvoy
author_email = powerapi-staff@inria.fr
license = MIT License
classifiers =
	    Programming Language :: Python :: 3.7
	    License :: OSI Approved :: MIT License

project_urls =
	     Homepage = http://powerapi.org/
	     Source = https://github.com/powerapi-ng/pyRAPL

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2
tests_require =
    pytest >=3.9.2
    mock >=2.0

[options.extras_require]
docs =
    sphinx >=1.8.1
    sphinx-autodoc-typehints >=1.6.0

[aliases]
test = pytest

[bdist_wheel]
universal = true

[flake8]
max-line-length = 160
ignore = W504